--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
+    "sqlite3": "^5.0.2",
     "vue": "^3.0.11",
     "vuex": "^4.0.0"
   }
